--- a/TMS/TMS/Areas/Manager/Views/ManageSC/Priority.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/ManageSC/Priority.cshtml
@@ -18,17 +18,11 @@
                 <table class="table dataTable" id="priority-table">
                     <thead>
                         <tr>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Description
-                            </th>
-                            <th>
-                                Color
-                            </th>
-                            <th>
-                            </th>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Color</th>
+                            <th>Level</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody></tbody>
@@ -63,6 +57,12 @@
                         <label class="col-sm-2 control-label">Color&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="color-txt">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Level&nbsp;<span style="color: red">*</span></label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="level-txt">
                         </div>
                     </div>
                     <div class="form-group">
@@ -134,32 +134,43 @@
                 ajax: {
                     url: "/Manager/ManageSC/GetPriority"
                 },
-                "columnDefs": [
+                columnDefs: [
                     {
                         "render": function (data, type, row) {
-                            return row[1];
+                            return row.Name;
                         },
                         "targets": 0,
-                        "type": "date"
                     },
                     {
                         "render": function (data, type, row) {
-                            return row[2];
+                            return row.Description;
                         },
                         "targets": 1
                     },
                     {
                         "render": function (data, type, row) {
-                            return '<canvas id="priority-color" width="15" height="15" style="background: ' + row[3] + ';"></canvas>' + row[3];
+                            return '<canvas id="priority-color" width="15" height="15" style="background: ' + row.Color + ';"></canvas>' + row.Color;
                         },
                         "targets": 2
                     },
                     {
                         "render": function (data, type, row) {
-                            return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getPriorityDetail(\'' + row[0] + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;' +
-                                   '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row[0] + '\')"><i class="fa fa-trash-o"></i></a>';
+                            return row.Level;
                         },
                         "targets": 3
+                    },
+                    {
+                        "render": function (data, type, row) {
+                            var content = "";
+                            if (row.IsSystem) {
+                                content = '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getPriorityDetail(\'' + row.Id + '\')"><i class="fa fa-pencil"></i></a>';
+                            } else {
+                                content = '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getPriorityDetail(\'' + row.Id + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;' +
+                                   '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row.Id + '\')"><i class="fa fa-trash-o"></i></a>';
+                            }
+                            return content;
+                        },
+                        "targets": 4
                     }
                 ]
             });
@@ -193,7 +204,8 @@
                 data: {
                     Name: $("#name-txt").val(),
                     Description: $("#description-txt").val(),
-                    Color: $("#color-txt").val()
+                    Color: $("#color-txt").spectrum('get').toHexString(),
+                    Level: $("#level-txt").val()
                 },
                 success: function (data) {
                     if (data.success) {
@@ -239,12 +251,13 @@
                 success: function (data) {
                     if (data.success) {
                         $("#myModal").modal("show");
-                        $("#name-txt").val(data.name);
-                        $("#description-txt").val(data.description);
+                        $("#name-txt").val(data.priority.Name);
+                        $("#description-txt").val(data.priority.Description);
                         $("#color-txt").spectrum({
-                            color: data.color
+                            color: data.priority.Color
                         });
-                        $("#color-txt").val(data.color);
+                        $("#color-txt").val(data.priority.Color);
+                        $("#level-txt").val(data.priority.Level)
                         $("#create-btn").attr("onclick", "editPriority('" + id + "')");
                     } else {
                         noty({
@@ -275,7 +288,8 @@
                     id: id,
                     Name: $("#name-txt").val(),
                     Description: $("#description-txt").val(),
-                    Color: $("#color-txt").val()
+                    Color: $("#color-txt").spectrum('get').toHexString(),
+                    Level: $("#level-txt").val()
                 },
                 success: function (data) {
                     if (data.success) {
