--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -213,21 +213,20 @@
                             </div>
                             <!-- /.box-header -->
                             <div class="box-body collapse" id="detail-box">
-
                                 <div class="col-sm-12 row-content">
-                                    <div class="col-sm-4 ">
+                                    <div class="col-sm-4">
                                         <div class="col-sm-6 labels">
                                             <b>Type: </b>
                                         </div>
-                                        <div class="col-sm-6" style="padding-left: 19px"><span id="ticket-type"></span></div>
+                                        <div class="col-sm-6"><span id="ticket-type"></span></div>
                                     </div>
-                                    <div class="col-sm-4 ">
+                                    <div class="col-sm-4">
                                         <div class="col-sm-6 labels">
                                             <b>Mode: </b>
                                         </div>
-                                        <div class="col-sm-6" style="padding-left: 30px"><span id="ticket-mode"></span></div>
+                                        <div class="col-sm-6"><span id="ticket-mode"></span></div>
                                     </div>
-                                    <div class="col-sm-4 " style="padding-left: 40px">
+                                    <div class="col-sm-4">
                                         <div class="col-sm-6 labels">
                                             <b>Status: </b>
                                         </div>
@@ -235,23 +234,23 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-12 row-content">
-                                    <div class="col-sm-4 ">
-                                        <div class="col-sm-6 labels">
-                                            <b>Urgency: </b>
-                                        </div>
-                                        <div class="col-sm-6" style="padding-left: 19px"><span id="ticket-urgency"></span></div>
-                                    </div>
-                                    <div class="col-sm-4 ">
-                                        <div class="col-sm-6 labels">
-                                            <b>Priority: </b>
-                                        </div>
-                                        <div class="col-sm-6" style="padding-left: 30px"><span id="ticket-priority"></span></div>
-                                    </div>
-                                    <div class="col-sm-4 " style="padding-left: 40px">
+                                    <div class="col-sm-4">
                                         <div class="col-sm-6 labels">
                                             <b>Impact: </b>
                                         </div>
                                         <div class="col-sm-6"><span id="ticket-impact"></span></div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="col-sm-6 labels">
+                                            <b>Urgency: </b>
+                                        </div>
+                                        <div class="col-sm-6"><span id="ticket-urgency"></span></div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="col-sm-6 labels">
+                                            <b>Priority: </b>
+                                        </div>
+                                        <div class="col-sm-6"><span id="ticket-priority"></span></div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 row-content">
@@ -326,11 +325,11 @@
                                 </div>
 
                                 <div class="col-sm-12 row-content">
-                                    <div class="col-sm-6 ">
+                                    <div class="col-sm-6">
                                         <div class="col-sm-6 labels">
-                                            <b>Actual start date: </b>
+                                            <b>Due by date: </b>
                                         </div>
-                                        <div class="col-sm-6"><span id="ticket-actual-start"></span></div>
+                                        <div class="col-sm-6"><span id="ticket-due-by-date"></span></div>
                                     </div>
                                     <div class="col-sm-6 ">
                                         <div class="col-sm-6 labels">
@@ -345,12 +344,6 @@
                                             <b>Solved date: </b>
                                         </div>
                                         <div class="col-sm-6"><span id="ticket-solved-date"></span></div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="col-sm-6 labels">
-                                            <b>Due by date: </b>
-                                        </div>
-                                        <div class="col-sm-6"><span id="ticket-due-by-date"></span></div>
                                     </div>
                                 </div>
                             </div>
