--- a/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
@@ -345,7 +345,7 @@
                                 <div class="col-lg-3 col-md-3 col-sm-4">
                                     <div class="pull-right text-right">
                                         <p class="text-muted"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Last modified</p>
-                                        <span class="text-light-blue">@GeneralUtil.ShowDateTime(solution.ModifiedTime.Value)</span>
+                                        <span class="text-light-blue">@GeneralUtil.ShowDateTime(solution.ModifiedTime)</span>
                                     </div>
                                 </div>
                             </div>
